# rpc-datetime

proto/rpc_datetime/: holiday.proto
rust/rpc-datetime/: Cargo.toml  build.rs
rust/rpc-datetime/src/: lib.rs  pb.rs
rust/rpc-datetime/src/pb/: rpc_datetime.rs  typ_p.rs
